[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://GFX/Font/RPGSystem.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GFX/Photo/foto_background.png" type="Texture" id=3]
[ext_resource path="res://GFX/Photo/foto.png" type="Texture" id=4]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 20.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=3]
ItemList/colors/font_color = Color( 1, 1, 1, 1 )
ItemList/colors/font_color_selected = Color( 1, 1, 1, 1 )
ItemList/colors/guide_color = Color( 0, 0, 0, 0.1 )
ItemList/constants/hseparation = 4
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 2
ItemList/constants/vseparation = 2
ItemList/fonts/font = null
ItemList/styles/bg = SubResource( 2 )
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -123 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -123 ), Vector2( 0, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
margin_top = -123.0
rect_min_size = Vector2( 1280, 123 )
mouse_default_cursor_shape = 1
theme = SubResource( 4 )
color = Color( 0, 0, 0, 0.588235 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ColorRect"]
margin_right = 1281.0
margin_bottom = 122.0
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/HBoxContainer"]
margin_left = 66.0
margin_right = 194.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="Control/ColorRect/HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0%"
align = 1
valign = 1

[node name="TextureProgress" type="TextureProgress" parent="Control/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 128.0
margin_bottom = 106.0
max_value = 6.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="ItemList" type="ItemList" parent="Control/ColorRect/HBoxContainer"]
margin_left = 214.0
margin_right = 1214.0
margin_bottom = 122.0
rect_min_size = Vector2( 1000, 0 )
mouse_filter = 1
theme = SubResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/guide_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
items = [ "", null, false, "", null, false, "", null, false, "", null, false, "", null, false, "", null, false, "", null, false, "", null, false ]
select_mode = 1
auto_height = true
max_columns = 10
icon_mode = 0

[node name="Button" type="Button" parent="Control/ColorRect"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 269.238
margin_top = 120.432
margin_right = 949.238
margin_bottom = 165.432
custom_fonts/font = SubResource( 7 )
text = "Inventario"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[connection signal="mouse_entered" from="Control/ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Control/ColorRect" to="." method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="Control/ColorRect/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Control/ColorRect/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
